--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       height: 100vh;
       text-align: center;
       background-image: url('logo.jpg'); /* immagine locale nella stessa cartella */
-      background-size: contain;
+      background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
       color: white;
@@ -29,7 +29,7 @@
       text-shadow: 1px 1px 3px #000;
     }
     #timer {
-      font-size: 3rem;
+      font-size: 8vw;
       font-weight: bold;
       text-shadow: 2px 2px 4px #000;
     }
@@ -97,3 +97,4 @@
 
 </body>
 </html>
+
