--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </head>
 <body>
 
-  <h1>Iscrizioni Gare Nuoto Master</h1>
+  <h1>Iscrizioni 1° Manifestazione Master</h1>
   <p>Le iscrizioni chiudono tra:</p>
   <div id="timer">--:--:--</div>
   <div id="warning">Affrettati a rispondere!</div>
@@ -97,4 +97,5 @@
 
 </body>
 </html>
+
 
