--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
 </head>
 <body>
 
-  <h1>Iscrizioni 1° Manifestazione Master</h1>
+  <h1>Iscrizioni 2° Trofeo Master Città di Montebelluna</h1>
   <p>Le iscrizioni chiudono tra:</p>
   <div id="timer">--:--:--</div>
   <div id="warning">Affrettati a rispondere!</div>
 
   <script>
     // Data di chiusura: anno, mese-1, giorno, ore, minuti, secondi
-    const closingDate = new Date(2025, 8, 23, 23, 59, 0); // 3 settembre 2025 alle 23:59
+    const closingDate = new Date(2025, 9, 6, 19, 00, 0); // 3 settembre 2025 alle 23:59
     const timerEl = document.getElementById('timer');
     const warningEl = document.getElementById('warning');
 
@@ -97,5 +97,6 @@
 
 </body>
 </html>
+
 
 
