--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </head>
 <body>
 
-  <h1>Iscrizioni 2° Trofeo Master Montebelluna</h1>
+  <h1>Iscrizioni 2belluna</h1>
   <p>Le iscrizioni chiudono tra:</p>
   <div id="timer">--:--:--</div>
   <div id="warning">Affrettati a rispondere!</div>
@@ -97,3 +97,4 @@
 
 </body>
 </html>
+
