--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </head>
 <body>
 
-  <h1>Iscrizioni Montebelluna</h1>
+  <h1>Iscrizioni Belluno</h1>
   <p>Le iscrizioni chiudono tra:</p>
   <div id="timer" aria-live="polite">--:--:--</div>
   <div id="warning">Affrettati a rispondere!</div>
@@ -100,4 +100,5 @@
 
 </body>
 </html>
+
 
