--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
 </head>
 <body>
 
-  <h1>Iscrizioni trofeo Casa di Caccia</h1>
+  <h1>Iscrizioni trofeo Campionati Regionali</h1>
   <p>Le iscrizioni chiudono tra:</p>
   <div id="timer" aria-live="polite">--:--:--</div>
   <div id="warning">Affrettati a rispondere!</div>
 
   <script>
-    const closingDate = new Date(2025, 00, 05, 19, 0, 0); // 19 novembre 2025, ore 19:00
+    const closingDate = new Date(2026, 00, 05, 19, 0, 0); // 5 gennaio 2026, ore 19:00
     const timerEl = document.getElementById('timer');
     const warningEl = document.getElementById('warning');
 
@@ -100,6 +100,7 @@
 
 </body>
 </html>
+
 
 
 
